# localmp3updateyoutubemusictypeshit

./: .gitignore  README.md  pyproject.toml
src/ytmusic_sync/: cli.py  comparator.py  config.py  downloader.py  local_scanner.py  utils.py  yt_fetcher.py
